fix pr c/57577

fix pr c/57577
gcc/c/ChangeLog
+2013-06-12  Balaji V. Iyer  <balaji.v.iyer@intel.com>
+
+       * c-array-notation.c (build_array_notation_expr): Reject array notation
+       mismatch between LHS and RHS even inside a call_expr.  Also, removed
+       a couple while statements that were dead code.
+

gcc/testsuite/ChangeLog
+2013-06-12  Balaji V. Iyer  <balaji.v.iyer@intel.com>
+
+       PR c/57577
+       * c-c++-common/cilk-plus/AN/pr57577.c: New testcase.
+

From-SVN: r200043